--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                     <button>Let's talk</button>
                 </li>
             </ul>
+            <img class="hamburger" src="./images/hamburger-white.png" alt="" srcset="">
         </nav>
         <div class="inner-header">
             <img src="./images/1.jpg" alt="group of people">
